--- a/app/src/main/res/layout/activity_donation_campaign_selection_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_selection_page.xml
@@ -46,27 +46,13 @@
     </LinearLayout>
 
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/navTop">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </ListView>
 
 
 
