--- a/app/src/main/res/layout/activity_unspecialized_selection.xml
+++ b/app/src/main/res/layout/activity_unspecialized_selection.xml
@@ -50,13 +50,12 @@
 
 <!--    Insert relative layout item here-->
     <RelativeLayout
-        android:id="@+id/dynamicLayoutContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/navTop"
         android:layout_above="@id/navBot">
         <ListView
-            android:id="@+id/activityListView"
+            android:id="@+id/unspecializedActivityListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -65,7 +64,8 @@
             android:dividerHeight="0dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:clipToPadding="false"/>
+            android:clipToPadding="false"
+            tools:listitem="@layout/activity_unspecialized_selection_item"/>
     </RelativeLayout>
 
     <ImageView
