--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -95,7 +95,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="25dp"
                 android:hint="Password"
-                android:background="#EFEEEE">
+                android:background="#EFEEEE"
+                android:inputType="textPassword">
             </EditText>
         </LinearLayout>
 
