--- a/app/src/main/res/layout/activity_campaign_posting_options_page.xml
+++ b/app/src/main/res/layout/activity_campaign_posting_options_page.xml
@@ -130,15 +130,39 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/navbottom" />
-
+        android:src="@drawable/navbottom"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/navBot"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
-
+        <ImageButton
+            android:id="@+id/notificationImageButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="1"
+            android:background="#F4F5F5"
+            android:scaleType="fitCenter"
+            android:src="@drawable/bell">
+        </ImageButton>
+        <ImageButton
+            android:id="@+id/homeImageButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="15dp"
+            android:layout_weight="1"
+            android:background="#F4F5F5"
+            android:scaleType="fitCenter"
+            android:src="@drawable/home">
+        </ImageButton>
         <ImageButton
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -149,30 +173,7 @@
             android:layout_weight="1"
             android:background="#F4F5F5"
             android:scaleType="fitCenter"
-            android:src="@drawable/bell" />
-
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="1"
-            android:background="#F4F5F5"
-            android:scaleType="fitCenter"
-            android:src="@drawable/home" />
-
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="1"
-            android:background="#F4F5F5"
-            android:scaleType="fitCenter"
-            android:src="@drawable/more" />
+            android:src="@drawable/more">
+        </ImageButton>
     </LinearLayout>
 </RelativeLayout>
