--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -66,7 +66,8 @@
                 android:paddingLeft="15dp"
                 android:hint="Email"
                 android:textColorHighlight="@color/black"
-                android:background="#EFEEEE">
+                android:background="#EFEEEE"
+                android:inputType="textEmailAddress">
 
             </EditText>
 
