--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -65,6 +65,7 @@
                 android:layout_marginRight="20dp"
                 android:paddingLeft="15dp"
                 android:hint="Email"
+                android:inputType="textEmailAddress"
                 android:textColorHighlight="@color/black"
                 android:background="#EFEEEE">
 
