--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -46,7 +46,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/grey_rounded_corner"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginHorizontal="50dp">
         <EditText
             android:id="@+id/emailEditText"
@@ -94,15 +94,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="20dp">
         <Button
             android:id="@+id/createAccountButton"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Create Account"
             android:background="@drawable/rounded_corner"
-            android:textColor="@color/white"
-            android:layout_marginTop="10dp"/>
+            android:textColor="@color/white" />
     </LinearLayout>
 
 
