OPORTO ga remove sa input type kay na double ang sa email, na error nuon

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -67,8 +67,7 @@
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:textColorHighlight="@color/black"
-                android:background="#EFEEEE"
-                android:inputType="textEmailAddress">
+                android:background="#EFEEEE">
 
             </EditText>
 
