--- a/app/src/main/res/layout/activity_unspecialized_selection.xml
+++ b/app/src/main/res/layout/activity_unspecialized_selection.xml
@@ -35,14 +35,15 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="18dp"
                 android:layout_marginBottom="5dp"
+                android:layout_marginLeft="30dp"
                 android:layout_marginRight="90dp"
                 android:layout_weight="1"
                 android:text="Join an Activity"
                 android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="22dp"
                 android:textStyle="bold">
             </TextView>
         </LinearLayout>
@@ -52,20 +53,21 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/navTop"
-        android:layout_above="@id/navBot">
+        android:layout_above="@id/navBot"
+        android:layout_below="@id/navTop">
+
         <ListView
             android:id="@+id/unspecializedActivityListView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:clipToPadding="false"
             android:divider="@null"
             android:dividerHeight="0dp"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
-            android:clipToPadding="false"
-            tools:listitem="@layout/activity_unspecialized_selection_item"/>
+            tools:listitem="@layout/activity_unspecialized_selection_item" />
     </RelativeLayout>
 
     <ImageView
