--- a/app/src/main/res/layout/activity_volunteer_campaign_status.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_status.xml
@@ -47,79 +47,19 @@
                 android:textSize="22dp"
                 android:textStyle="bold" />
         </LinearLayout>
+
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp">
-
-        <ImageView
-            android:id="@+id/pfp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/circular_background"
-            android:clipToOutline="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/person_placeholder" />
-
-        <TextView
-            android:id="@+id/postedby"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/pfp"
-            android:text="Posted By:"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"/>
-
-        <TextView
-            android:id="@+id/loc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Location:"
-            android:layout_toRightOf="@id/pfp"
-            android:layout_below="@id/postedby"
-            android:textSize="20sp"
-            android:layout_marginLeft="10dp"/>
-
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:layout_toRightOf="@id/postedby"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="10dp"/>
-
-        <TextView
-            android:id="@+id/place"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Insert Loc."
-            android:textSize="20sp"
-            android:layout_toRightOf="@id/loc"
-            android:layout_below="@id/name"
-            android:layout_marginLeft="10dp"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="10dp">
 
         <ImageView
             android:id="@+id/postedpic"
             android:layout_width="350dp"
             android:layout_height="180dp"
-            android:src="@drawable/volunteer"
+            android:src="@drawable/placeholder"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
